# Neural_networks

./: .cursorignore  .gitignore  26-03-13.ipynb  26-03-27.ipynb  BDZ.ipynb  Homework_1.ipynb  Homework_2.ipynb  Homework_3.ipynb  Lab2.ipynb  Lab3.ipynb  README.md  pyproject.toml  trainer.py
files/БДЗ/: Нейронные сети - ДЗ - варианты 2026.docx  Нейронные сети - ДЗ 2026.docx
files/ЛР_1/: tns_otchet1.docx  Сайт для выполнения.docx
files/ЛР_2/: tns_otchet2.docx
files/ЛР_3/: tns_otchet3.docx
